--- a/slides/index.html
+++ b/slides/index.html
@@ -1182,32 +1182,29 @@ def square_all(numbers):
             </g>
             <!-- dict object (middle) -->
             <g>
-              <path d="M 118 75 L 95 75 L 95 195 L 118 195" fill="#d5e8d4" stroke="#82b366" stroke-miterlimit="10"/>
-              <path d="M 118 75 L 265 75 L 265 195 L 118 195" fill="none" stroke="#82b366" stroke-miterlimit="10"/>
-              <path d="M 118 75 L 118 195" fill="none" stroke="#82b366" stroke-miterlimit="10"/>
-              <text x="106.5" y="139" fill="#000" text-anchor="middle" font-size="13px" transform="rotate(-90,106.5,135)">dict</text>
-              <!-- key-value pair: "purple" -->
-              <rect x="128" y="85" width="65" height="25" fill="none" stroke="#000"/>
-              <text x="160" y="102" fill="#000" font-size="12px" text-anchor="middle">"purple"</text>
-              <rect x="193" y="85" width="60" height="25" fill="none" stroke="#000"/>
-              <!-- key-value pair: "blue" -->
-              <rect x="128" y="120" width="65" height="25" fill="none" stroke="#000"/>
-              <text x="160" y="137" fill="#000" font-size="12px" text-anchor="middle">"blue"</text>
-              <rect x="193" y="120" width="60" height="25" fill="none" stroke="#000"/>
-              <!-- key-value pair: "green" -->
-              <rect x="128" y="155" width="65" height="25" fill="none" stroke="#000"/>
-              <text x="160" y="172" fill="#000" font-size="12px" text-anchor="middle">"green"</text>
-              <rect x="193" y="155" width="60" height="25" fill="none" stroke="#000"/>
+              <path d="M 138 75 L 115 75 L 115 185 L 138 185" fill="#d5e8d4" stroke="#82b366" stroke-miterlimit="10"/>
+              <path d="M 138 75 L 215 75 L 215 185 L 138 185" fill="none" stroke="#82b366" stroke-miterlimit="10"/>
+              <path d="M 138 75 L 138 185" fill="none" stroke="#82b366" stroke-miterlimit="10"/>
+              <text x="126.5" y="134" fill="#000" text-anchor="middle" font-size="13px" transform="rotate(-90,126.5,130)">dict</text>
+              <!-- key: "purple" -->
+              <rect x="148" y="85" width="55" height="20" fill="none" stroke="#000"/>
+              <text x="175" y="99" fill="#000" font-size="11px" text-anchor="middle">"purple"</text>
+              <!-- key: "blue" -->
+              <rect x="148" y="120" width="55" height="20" fill="none" stroke="#000"/>
+              <text x="175" y="134" fill="#000" font-size="11px" text-anchor="middle">"blue"</text>
+              <!-- key: "green" -->
+              <rect x="148" y="155" width="55" height="20" fill="none" stroke="#000"/>
+              <text x="175" y="169" fill="#000" font-size="11px" text-anchor="middle">"green"</text>
             </g>
-            <!-- arrows: all three values → same list -->
-            <line x1="253" y1="97" x2="310" y2="49" stroke="#000" marker-end="url(#arr-dict)"/>
-            <line x1="253" y1="132" x2="310" y2="49" stroke="#000" marker-end="url(#arr-dict)"/>
-            <line x1="253" y1="167" x2="310" y2="49" stroke="#000" marker-end="url(#arr-dict)"/>
+            <!-- arrows: all three keys → same list (spread across top of list box) -->
+            <line x1="203" y1="95" x2="305" y2="47" stroke="#000" marker-end="url(#arr-dict)"/>
+            <line x1="203" y1="130" x2="328" y2="47" stroke="#000" marker-end="url(#arr-dict)"/>
+            <line x1="203" y1="165" x2="351" y2="47" stroke="#000" marker-end="url(#arr-dict)"/>
             <!-- groups variable -->
             <g>
               <rect x="2" y="120" width="72" height="30" fill="#e1d5e7" stroke="#9673a6"/>
               <text x="38" y="139" fill="#000" font-size="13px" text-anchor="middle">groups</text>
-              <line x1="74" y1="135" x2="90" y2="135" stroke="#000" marker-end="url(#arr-dict)"/>
+              <line x1="74" y1="135" x2="110" y2="135" stroke="#000" marker-end="url(#arr-dict)"/>
             </g>
           </svg>
           <aside class="notes" data-markdown>
